refactor and add amqp

--- a/config/packages/messenger.yaml
+++ b/config/packages/messenger.yaml
@@ -13,8 +13,8 @@ framework:
 
         transports:
             # https://symfony.com/doc/current/messenger.html#transport-configuration
-            # async: '%env(MESSENGER_TRANSPORT_DSN)%'
             # failed: 'doctrine://default?queue_name=failed'
+            async: '%env(ASYNC_MESSENGER_TRANSPORT_DSN)%'
             sync: 'sync://'
             outbox:
                 dsn: '%env(OUTBOX_TRANSPORT_DSN)%'
@@ -27,11 +27,12 @@ framework:
             App\Application\Contract\CommandInterface: sync
             App\Application\Contract\QueryInterface: sync
             App\BuildingBlocks\Application\Event\DomainEventNotificationInterface: outbox
+            App\BuildingBlocks\Infrastructure\Event\IntegrationEvent: async
 
 # when@test:
 #    framework:
 #        messenger:
 #            transports:
-#                # replace with your transport name here (e.g., my_transport: 'in-memory://')
+#                # replace with your transport name here (e.g., my_transpor`t: 'in-memory://')
 #                # For more Messenger testing tools, see https://github.com/zenstruck/messenger-test
 #                async: 'in-memory://'
