--- a/.env
+++ b/.env
@@ -46,5 +46,6 @@ POSTGRES_VERSION=15
 # MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
 # MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
 # MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
+ASYNC_MESSENGER_TRANSPORT_DSN=amqp://guest:guest@rabbit:5672/%2f/messages
 OUTBOX_TRANSPORT_DSN=doctrine://default
 ###< symfony/messenger ###
