add reverse proxt

--- a/.env
+++ b/.env
@@ -14,10 +14,7 @@
 # Run "composer dump-env prod" to compile .env files for production use (requires symfony/flex >=1.2).
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
-SERVER_NAME="notifications.localhost"
-HTTP_PORT=82
-HTTPS_PORT=4444
-HTTP3_PORT=4444
+SERVER_NAME="http://"
 APP_TIMEZONE=Europe/Warsaw
 
 ###> symfony/framework-bundle ###
