--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: "3.4"
 
 services:
   php:
+    container_name: neuron-notifications-php
     build:
       context: .
       target: app_php
@@ -22,6 +23,7 @@ services:
       - neuron
 
   caddy:
+    container_name: neuron-notifications-server
     build:
       context: .
       target: app_caddy
@@ -34,19 +36,11 @@ services:
       - php_socket:/var/run/php
       - caddy_data:/data
       - caddy_config:/config
-    ports:
-      # HTTP
-      - target: 80
-        published: ${HTTP_PORT:-80}
-        protocol: tcp
-      # HTTPS
-      - target: 443
-        published: ${HTTPS_PORT:-443}
-        protocol: tcp
-      # HTTP/3
-      - target: 443
-        published: ${HTTP3_PORT:-443}
-        protocol: udp
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.notifications.rule=Host(`notifications.neuron.localhost`)"
+      - "traefik.http.routers.notifications.tls=true"
+      - "traefik.http.routers.notifications.entrypoints=http,https"
     networks:
       - neuron
 
