--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -1,7 +1,7 @@
 doctrine:
     dbal:
         url: '%env(resolve:DATABASE_URL)%'
-        schema_filter: '~^(?!outbox_messages)~'
+        schema_filter: '~^(?!outbox_messages|inbox_messages)~'
         types: ~
     orm:
         auto_generate_proxy_classes: true
