--- a/.env
+++ b/.env
@@ -43,6 +43,7 @@ POSTGRES_VERSION=15
 # MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
 # MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
 # MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
-ASYNC_MESSENGER_TRANSPORT_DSN=amqp://guest:guest@rabbit:5672/%2f/messages
+ASYNC_MESSENGER_TRANSPORT_DSN=amqp://guest:guest@rabbit:5672/%2f/
 OUTBOX_TRANSPORT_DSN=doctrine://default
+INBOX_TRANSPORT_DSN=doctrine://default
 ###< symfony/messenger ###
