--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "doctrine/doctrine-bundle": "^2.9",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.14",
+        "neuron/building-blocks": "^0.0.13",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.18",
         "sensio/framework-extra-bundle": "^6.2",
@@ -89,5 +90,11 @@
         "symfony/browser-kit": "6.2.*",
         "symfony/css-selector": "6.2.*",
         "symfony/phpunit-bridge": "^6.2"
-    }
+    },
+    "repositories": [
+        {
+            "type": "git",
+            "url": "https://github.com/X0GT0X/neuron-building-blocks.git"
+        }
+    ]
 }
