migrate to new building blocks version

--- a/config/packages/messenger.yaml
+++ b/config/packages/messenger.yaml
@@ -39,11 +39,12 @@ framework:
                     auto_setup: false
 
         routing:
-            App\BuildingBlocks\Domain\DomainEventInterface: sync
+            Neuron\BuildingBlocks\Domain\DomainEventInterface: sync
             App\Application\Contract\CommandInterface: sync
             App\Application\Contract\QueryInterface: sync
-            App\BuildingBlocks\Application\Event\DomainEventNotificationInterface: outbox
-            App\Infrastructure\Configuration\Inbox\InboxMessage: inbox
+            Neuron\BuildingBlocks\Application\Event\DomainEventNotificationInterface: sync
+            Neuron\BuildingBlocks\Infrastructure\Outbox\OutboxMessage: outbox
+            Neuron\BuildingBlocks\Infrastructure\Inbox\InboxMessage: inbox
             Neuron\BuildingBlocks\Integration\SentIntegrationEventInterface: async
             Neuron\BuildingBlocks\Integration\ReceivedIntegrationEventInterface: sync
 
