--- a/phpstan.neon
+++ b/phpstan.neon
@@ -10,3 +10,6 @@ parameters:
         - tests
     excludePaths:
         - src/Infrastructure/Migration/*
+    ignoreErrors:
+            -
+                message: '#^Property [a-zA-Z0-9\\_]+::\$[a-zA-Z\_]+ is never read, only written.$#'
