--- a/phpstan.neon
+++ b/phpstan.neon
@@ -13,3 +13,5 @@ parameters:
     ignoreErrors:
             -
                 message: '#^Property [a-zA-Z0-9\\_]+::\$[a-zA-Z\_]+ is never read, only written.$#'
+            -
+                message:  '#^Call to an undefined method ReflectionType::.+$#'
