add integration tests

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -3,7 +3,7 @@ includes:
 
 parameters:
     level: 8
-    checkUninitializedProperties: true
+    checkUninitializedProperties: false
     checkGenericClassInNonGenericObjectType: false
     paths:
         - src
@@ -15,3 +15,5 @@ parameters:
                 message: '#^Property [a-zA-Z0-9\\_]+::\$[a-zA-Z\_]+ is never read, only written.$#'
             -
                 message:  '#^Call to an undefined method ReflectionType::.+$#'
+            -
+                message: '#^Property .+ does not accept object\|null.$#'
