--- a/.env
+++ b/.env
@@ -28,7 +28,7 @@ APP_SECRET=631f75ec87df6d5e9a66984074e7c738
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8&charset=utf8mb4"
-DATABASE_URL="postgresql://user:pass@127.0.0.1:5432/notifications?serverVersion=15&charset=utf8"
+DATABASE_URL="postgresql://user:pass@database:5432/notifications?serverVersion=15&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
 ###> postgres ###
