--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -14,11 +14,7 @@
       <directory>tests</directory>
     </testsuite>
   </testsuites>
-  <coverage>
-    <include>
-      <directory suffix=".php">src</directory>
-    </include>
-  </coverage>
+  <coverage includeUncoveredFiles="false"/>
   <extensions>
     <bootstrap class="DAMA\DoctrineTestBundle\PHPUnit\PHPUnitExtension" />
   </extensions>
