--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -10,11 +10,18 @@
     <server name="SYMFONY_PHPUNIT_VERSION" value="9.5"/>
   </php>
   <testsuites>
-    <testsuite name="Project Test Suite">
-      <directory>tests</directory>
+    <testsuite name="Unit tests">
+      <directory>tests/UnitTest</directory>
+    </testsuite>
+    <testsuite name="Integration tests">
+      <directory>tests/IntegrationTest</directory>
     </testsuite>
   </testsuites>
-  <coverage includeUncoveredFiles="false"/>
+  <coverage includeUncoveredFiles="false">
+    <include>
+      <directory suffix=".php">src</directory>
+    </include>
+  </coverage>
   <extensions>
     <bootstrap class="DAMA\DoctrineTestBundle\PHPUnit\PHPUnitExtension" />
   </extensions>
