--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -8,13 +8,40 @@ permissions:
     contents: read
 
 jobs:
+    build:
+        name: Docker Build
+        
+        runs-on: ubuntu-20.04
+            
+        steps:
+          - name: Checkout
+            uses: actions/checkout@v3
+          
+          - name: Pull images
+            run: make -f CI.Makefile pull
+        
+          -   name: Start services
+              run: make -f CI.Makefile up
+
+          -   name: Wait for services
+              run: |
+                  while status="$(docker inspect --format="{{if .Config.Healthcheck}}{{print .State.Health.Status}}{{end}}" "$(docker compose ps -q php)")"; do
+                    case $status in
+                      starting) sleep 1;;
+                      healthy) exit 0;;
+                      unhealthy) exit 1;;
+                    esac
+                  done
+                  exit 1
+    
     static-analysis:
         name: Static Analysis
         
         runs-on: ubuntu-20.04
         
         steps:
-            - uses: actions/checkout@v3
+            - name: Checkout
+              uses: actions/checkout@v3
 
             - name: Validate composer.json and composer.lock
               run: composer validate --strict
