--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -12,6 +12,8 @@ services:
     restart: unless-stopped
     volumes:
       - php_socket:/var/run/php
+      - ./:/srv/app
+      - ./docker/php/conf.d/app.dev.ini:/usr/local/etc/php/conf.d/app.dev.ini:ro
     environment:
       DATABASE_URL: postgresql://${POSTGRES_USER:-app}:${POSTGRES_PASSWORD:-!ChangeMe!}@database:5432/${POSTGRES_DB:-app}?serverVersion=${POSTGRES_VERSION:-14}&charset=${POSTGRES_CHARSET:-utf8}
   
