--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -24,11 +24,11 @@ jobs:
               run: docker compose -f docker-compose.ci.yml up -d
 
           -   name: Wait
-              run: sleep 30s
+              run: sleep 5s
               shell: bash
 
           -   name: Creating databases
-              run: docker compose -f docker-compose.ci.yml exec php bin/console --env=test doctrine:database:create
+              run: docker compose -f docker-compose.ci.yml exec php bin/console doctrine:database:create && docker compose -f docker-compose.ci.yml exec php bin/console --env=test doctrine:database:create
 
           -   name: Run migrations
               run: docker compose -f docker-compose.ci.yml exec php bin/console --env=test d:m:m --dry-run
