--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -17,8 +17,8 @@ jobs:
           - name: Checkout
             uses: actions/checkout@v3
           
-          - name: Pull images
-            run: docker compose -f docker-compose.ci.yml pull
+          - name: Build containers
+            run: docker compose -f docker-compose.ci.yml build --pull --no-cache
         
           -   name: Start services
               run: docker compose -f docker-compose.ci.yml up -d
