--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -7,7 +7,7 @@ services:
     build:
       context: .
       dockerfile: CI.Dockerfile
-      target: app_php
+      target: app_php_dev
       args:
         SYMFONY_VERSION: ${SYMFONY_VERSION:-}
         STABILITY: ${STABILITY:-stable}
