--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,29 +12,27 @@ jobs:
         name: Docker Build
         
         runs-on: ubuntu-20.04
-            
-        steps:
-          - name: Checkout
-            uses: actions/checkout@v3
-          
-          - name: Build containers
-            run: docker compose -f docker-compose.ci.yml build --pull --no-cache
         
-          -   name: Start services
-              run: docker compose -f docker-compose.ci.yml up -d
+        steps:
+            -   name: Checkout
+                uses: actions/checkout@v3
 
-          -   name: Wait
-              run: sleep 30s
-              shell: bash
-              
-          -   name: Logs
-              uses: jwalton/gh-docker-logs@v2
-              
-          -   name: Creating databases
-              run: docker compose -f docker-compose.ci.yml exec php bin/console doctrine:database:create && docker compose -f docker-compose.ci.yml exec php bin/console --env=test doctrine:database:create
+            -   name: Set up Docker Build
+                uses: docker/setup-buildx-action@v2
 
-          -   name: Run migrations
-              run: docker compose -f docker-compose.ci.yml exec php bin/console --env=test d:m:m --dry-run
+            -   name: Build and export
+                uses: docker/build-push-action@v4
+                with:
+                    context: .
+                    file: CI.Dockerfile
+                    tags: php:latest
+                    outputs: type=docker,dest=/tmp/php.tar
+
+            -   name: Upload artifact
+                uses: actions/upload-artifact@v3
+                with:
+                    name: php
+                    path: /tmp/php.tar
     
     static-analysis:
         name: Static Analysis
@@ -42,28 +40,28 @@ jobs:
         runs-on: ubuntu-20.04
         
         steps:
-            - name: Checkout
-              uses: actions/checkout@v3
+            -   name: Checkout
+                uses: actions/checkout@v3
 
-            - name: Validate composer.json and composer.lock
-              run: composer validate --strict
+            -   name: Validate composer.json and composer.lock
+                run: composer validate --strict
 
-            - name: Cache Composer packages
-              id: composer-cache
-              uses: actions/cache@v3
-              with:
-                  path: vendor
-                  key: ${{ runner.os }}-php-${{ hashFiles('**/composer.lock') }}
-                  restore-keys: |
-                      ${{ runner.os }}-php-
-            - name: Install dependencies
-              run: composer install --prefer-dist --no-progress
+            -   name: Cache Composer packages
+                id: composer-cache
+                uses: actions/cache@v3
+                with:
+                    path: vendor
+                    key: ${{ runner.os }}-php-${{ hashFiles('**/composer.lock') }}
+                    restore-keys: |
+                        ${{ runner.os }}-php-
+            -   name: Install dependencies
+                run: composer install --prefer-dist --no-progress
 
-            - name: PHP CS
-              run: composer run-script php-cs
+            -   name: PHP CS
+                run: composer run-script php-cs
 
-            - name: PHP Stan
-              run: composer run-script php-stan
+            -   name: PHP Stan
+                run: composer run-script php-stan
     
     unit-tests:
         name: Unit Tests
@@ -114,10 +112,34 @@ jobs:
         needs: build
 
         runs-on: ubuntu-20.04
-        
+
         steps:
             -   name: Checkout
                 uses: actions/checkout@v3
-            
+
+            -   name: Download artifact
+                uses: actions/download-artifact@v3
+                with:
+                    name: php
+                    path: /tmp
+
+            -   name: Load image
+                run: |
+                    docker load --input /tmp/php.tar
+                    docker image ls -a
+
+            -   name: Start services
+                run: docker compose -f docker-compose.ci.yml up -d
+
+            -   name: Wait
+                run: sleep 5s
+                shell: bash
+
+            -   name: Creating databases
+                run: docker compose -f docker-compose.ci.yml exec php bin/console doctrine:database:create && docker compose -f docker-compose.ci.yml exec php bin/console --env=test doctrine:database:create
+
+            -   name: Run migrations
+                run: docker compose -f docker-compose.ci.yml exec php bin/console --env=test d:m:m --dry-run
+
             -   name: Testing
                 run: docker compose -f docker-compose.ci.yml exec php bin/phpunit tests/IntegrationTest
