--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -4,13 +4,7 @@ name: ci
 
 services:
   php:
-    build:
-      context: .
-      dockerfile: CI.Dockerfile
-      target: app_php_dev
-      args:
-        SYMFONY_VERSION: ${SYMFONY_VERSION:-}
-        STABILITY: ${STABILITY:-stable}
+    image: php:latest
     restart: unless-stopped
     volumes:
       - php_socket:/var/run/php
