--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,8 @@
         "allow-plugins": {
             "php-http/discovery": true,
             "symfony/flex": true,
-            "symfony/runtime": true
+            "symfony/runtime": true,
+            "phpstan/extension-installer": true
         },
         "sort-packages": true
     },
@@ -88,6 +89,8 @@
         "dama/doctrine-test-bundle": "^7.2",
         "friendsofphp/php-cs-fixer": "^3.16",
         "kubawerlos/php-cs-fixer-custom-fixers": "^3.14",
+        "phpat/phpat": "^0.10.6",
+        "phpstan/extension-installer": "^1.3",
         "phpstan/phpstan": "^1.10",
         "phpunit/phpunit": "^10.0",
         "symfony/browser-kit": "6.2.*",
